fix(navbar): remove caret on mobile

--- a/src/scss/custom/_navbar.scss
+++ b/src/scss/custom/_navbar.scss
@@ -314,6 +314,10 @@
 
     .navbar-dropdown {
       &:before {
+        @include touch {
+          display: none;
+        }
+
         content: '';
         display: block;
         position: absolute;
